fixing input appearance on ios safari

--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -31,6 +31,7 @@
       appearance: none;
       background-color: var(--backgroundColor);
       border: 1px solid var(--brandGray);
+      border-radius: 0;
       color: var(--text-color);
       padding: 0.9em;
       width: 100%;
